syntax = "proto3";

option java_multiple_files = true;
option java_package = "ar.utn.ccaffa.grpc";
option java_outer_classname = "ImageClassifierOuterClass";

service ImageClassifier {
  rpc ClassifyImage (ImageRequest) returns (ImageResponses);
}

message ImageRequest {
  bytes image = 1;
}

message ImageResponse {
  string class_name = 1;
  float probability = 2;
}

message ImageResponses {
  repeated ImageResponse responses = 1;
  bool found = 2; 
}
